--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,7 +8,8 @@
   <body>
     <div class="main-content">
         {{>header}}
-        <img class="portrait" src="/img/Passport1.jpeg">
+        <p>This site was created by Shiv. It uses data from mapbox.com and darksky.net</p>
+        <img class="portrait" src="/img/1.jpg">
         </div>
         {{>footer}}
   </body>
